# test_help-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: scalars.rs
src/: lib.rs
