
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "Test helpers for Rust"
edition = "2021"
homepage = "https://github.com/synesissoftware/test_help-rs"
license = "BSD-3-Clause"
name = "test_helpers"
readme = "README.md"
version = "0.0.0"


# ##########################################################
# Targets


# ##########################################################
# Features

[features]


# ##########################################################
# Dependencies

[dependencies]


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

