
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "Test helpers for Rust"
edition = "2021"
homepage = "https://github.com/synesissoftware/test_help-rs"
license = "BSD-3-Clause"
name = "test_help-rs"
readme = "README.md"
version = "0.1.0"


# ##########################################################
# Targets

[lib]
name = "test_helpers"
path = "src/lib.rs"

[[example]]
name = "scalars"
path = "examples/scalars.rs"


# ##########################################################
# Features

[features]

default = [

]

# General features:
#
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

null-feature = []

# Crate-specific features:
#
# - "nan-equality" - allows two `f64::NAN` values to be evaluated to be equal for the purposes of passing the assertions. NOTE: this affects all stock comparisons of the crate, but does not affect custom implementations of `xxApproximateEqualityEvaluator`;

nan-equality = []


# ##########################################################
# Dependencies

[dependencies]

base-traits = "~0.0.3"


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

